kube-mgmt/mydemo/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "hoge"
spec:
  backend:
    serviceName: demo-svc
    servicePort: 80
  rules:
    - host: demo.local
      http:
        paths:
          - backend:
              serviceName: demo-svc
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
